# Code-Forge

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml  uninstall.sh  update.sh
.ai/: ARCHITECTURE.md  CONVENTIONS.md  GUARDRAILS.md  MAP.md  PATTERNS.md  PERSONA.md  START.md  UNDONE.md
.ai/phase/1.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/1.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/1.3/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/10.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/10.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/2.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/2.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/2.3/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/3.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/3.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/4.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/4.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/5.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/5.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/6.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/6.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/7.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/7.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/8.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/8.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/9.1/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/phase/9.2/: COMPLETION_CRITERIA.md  GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
.ai/reference/: GHERKIN.md  PLAN.md  REQUIREMENTS.md  UML.md  WIREFRAMES.md
docs/: index.md
docs/development/: architecture.md  plugins.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: configuration.md  tools.md
docs/user-guide/: commands.md
scripts/: test_e2e.py
src/code_forge/: __init__.py  __main__.py
src/code_forge/agents/: __init__.py  base.py  executor.py  result.py  types.py
src/code_forge/cli/: __init__.py  main.py  repl.py  setup.py  status.py  themes.py
src/code_forge/commands/: __init__.py  executor.py  parser.py  (+1 more)
src/opencode/: __init__.py  __main__.py
tests/: __init__.py  conftest.py
tests/agents/: test_base.py  test_builtin.py  test_executor.py  test_manager.py  test_result.py  test_types.py
tests/commands/: __init__.py  test_base.py  test_builtin_commands.py  test_executor.py  test_parser.py  test_registry.py
tests/git/: test_context.py  test_diff.py  test_history.py  test_operations.py  test_repository.py  test_safety.py  test_status.py
tests/github/: __init__.py  conftest.py  test_actions.py  test_auth.py  test_client.py  test_context.py  test_issues.py  test_pull_requests.py  test_repository.py
tests/integration/: __init__.py  test_agent_workflow.py  test_error_recovery.py  test_tool_execution.py
tests/mcp/: __init__.py  test_client.py  test_config.py  test_coverage_boost.py  test_manager.py  test_protocol.py  test_tools.py  test_transport.py  test_transport_coverage.py
tests/plugins/: test_base.py  test_commands.py  test_config.py  test_discovery.py  test_exceptions.py  test_loader.py  test_manager.py  test_manifest.py  test_registry.py
tests/skills/: __init__.py  test_base.py  test_builtin.py  test_commands.py  test_loader.py  test_parser.py  test_registry.py
tests/unit/: __init__.py
tests/web/: __init__.py  test_cache.py  test_config.py  test_fetch.py  test_search.py  test_tools.py  test_types.py
(+290 files in other folders)
