[project]
name = "opencode"
version = "0.1.0"
description = "AI-powered CLI development assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
authors = [{ name = "OpenCode Contributors" }]
keywords = ["ai", "cli", "development", "assistant", "openrouter", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5,<3.0",
    "rich>=13.7,<14.0",
    "textual>=0.47,<1.0",
    "prompt-toolkit>=3.0,<4.0",
    "httpx[http2]>=0.26,<1.0",
    "aiohttp>=3.9,<4.0",
    "langchain>=0.1,<1.0",
    "langchain-core>=0.1,<1.0",
    "pyyaml>=6.0,<7.0",
    "watchdog>=3.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.1,<1.0",
]

[project.scripts]
opencode = "opencode.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0911",  # Too many return statements (main.py entry point)
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "TC003",    # Pydantic needs runtime imports for type hints
    "PLC0415",  # Import outside top-level (needed for optional deps and lazy loading)
    "SIM108",   # Ternary operator (sometimes clearer as if/else)
]

[tool.ruff.lint.per-file-ignores]
"src/opencode/tools/file/*.py" = [
    "PTH",      # Pathlib rules - file tools intentionally use os.path for flexibility
]
"src/opencode/langchain/*.py" = [
    "TC002",    # LangChain needs runtime imports for proper class inheritance
    "ARG002",   # Callback interfaces require unused args for compatibility
    "PLR0915",  # Agent methods are complex by nature
]
"src/opencode/commands/*.py" = [
    "RUF012",   # ClassVar annotations not needed - class attrs are intended design
    "ARG002",   # Command execute() methods have standardized signatures
    "SIM102",   # Nested ifs sometimes clearer for validation chains
]
"src/opencode/commands/builtin/*.py" = [
    "RUF012",   # ClassVar annotations not needed - class attrs are intended design
    "ARG002",   # Command execute() methods have standardized signatures
    "SIM105",   # contextlib.suppress less clear than try/except/pass
    "PLW2901", # Loop variable reassignment intentional for truncation
]

[tool.ruff.lint.isort]
known-first-party = ["opencode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/opencode"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90
